updates to blog config

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Team Caldwell
-description: A list of resources around the digital space.
+title: Neil Caldwell
+description: A list of things that I find of interest.
 show_downloads: false
 google_analytics: UA-115627944-1
 theme: jekyll-theme-merlot
